Added backup font

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 
-@import url('https://fonts.googleapis.com/css?family=Exo:400,900,300');
+@import url(https://fonts.googleapis.com/css?family=Exo:400,900,300);
+
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed);
 /*#header {
     background-color:black;
     color:white;
